<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253F67">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/file"
            android:contentDescription="@string/img_logo" />

        <TextView
            android:id="@+id/tvSilahkan"
            android:text="@string/silahkan_login_untuk_memakai_aplikasi"
            android:layout_below="@id/imglogo"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="@string/username"
            android:drawableStart="@drawable/ic_personlog"
            android:hint="@string/username"
            android:id="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvSilahkan"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/ic_lockpass"
            android:hint="@string/password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etUsername"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="Sign In"
            android:textColor="#ffffff"
            android:backgroundTint="#253F67"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in"
            android:layout_below="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCreate"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/create_a_new_account"
            android:layout_below="@id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</LinearLayout>
